--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jai shiv</title>                                                      
 <link rel="stylesheet" href="cssfornewindex.css">
-<link class="icon" rel="icon" type="" href="/My Bholenath's songs/symbols/tilak3.png">
+<link class="icon" rel="icon" type="" href="symbols/tilak3.png">
 </head>
 <body class="body">
-    <img class="leftimg" src="/My Bholenath's songs/symbols/cropped/tilak2.png" alt="tilaksymbol">
-    <img class="rightimg" src="/My Bholenath's songs/symbols/cropped/tilak2.png" alt="tilaksymbol">
-    <img class="centerimg" src="/My Bholenath's songs/symbols/harharmahadev.png" alt="imgnotloaded">
+    <img class="leftimg" src="symbols/cropped/tilak2.png" alt="tilaksymbol">
+    <img class="rightimg" src="symbols/cropped/tilak2.png" alt="tilaksymbol">
+    <img class="centerimg" src="symbols/harharmahadev.png" alt="imgnotloaded">
     <h1 class="heading">मेरे भोलेनाथ <br>के गीत</h1>
     <hr>
     <hr class="hr">
