--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="image1">
         <img src="songs/img/kankanmaishankar.jpg" alt="">
     </div>
-    <div class="music">
+    <div class="music1">
         <audio src="songs/Kan_Kan_Main_Shankar_Paddy_Shivo_(getmp3.pro).mp3" controls></audio>
     </div>
 </div>
