--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 -->
 <div class="container">
 <div class="heading1">
-    <p class="playlist">गानो की सूची</p>
+    <p class="playlist">गीतों की प्लेलिस्ट</p>
     <br></div>
 <div class="music-container">
     <div class="box">
