google analtics code in head tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Jai shiv</title>                                                      
 <link rel="stylesheet" href="cssfornewindex.css">
 <link class="icon" rel="icon" type="" href="symbols/tilak3.png">
-</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDY9M86LB1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YDY9M86LB1');
+</script>
+    </head>
 <body class="body">
     <img class="leftimg" src="symbols/cropped/tilak2.png" alt="tilaksymbol">
     <img class="rightimg" src="symbols/cropped/tilak2.png" alt="tilaksymbol">
